2007-03-09  Jackson Harper  <jackson@ximian.com>

	* TextBox.cs: Don't explicitly set our background colors.
	* TextControl.cs:
	* TextBoxBase.cs: Draw readonly text.
	
2007-03-09  Jackson Harper  <jackson@ximian.com>

	* TextBoxBase.cs: Don't set the forecolor until the handle is
	created.
	- Do not raise OnPaint, and removed some old debug code.

2007-03-09  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollableControl.cs: Fix mouse wheel scrolling.

2007-03-09  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: Wire up MouseDoubleClick event.

2007-03-09  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStrip.cs: Rework AutoSize to adjust height when docked to the
	top or bottom.
	* ToolStripItem.cs: Make Image drawing take ImageScaling into account.
	* ToolStripItemCollection.cs: Don't call owner.PerformLayout when a new
	item is added.  This logic was moved to ToolStrip.OnItemAdded.
	[Fixes bug #81090]

2007-03-08  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListVieItem.cs: SetIndex is only valid for 2.0 profile by now.

2007-03-08  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: Show the correct image for selected node (this used
	to work, not sure how the code got deleted). Also implemented 2.0 feature
	SelectedImageKey.

2007-03-08  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs:
	* ListViewItem.cs: Cache index in items when retrieving them
	in VirtualMode.

2007-03-08  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripItem.cs: Don't return the explicit_size if we are using 
	AutoSize.  Fixes invalidation issue when user has explicitly set a
	size and has AutoSize = true.

2007-03-08  Jonathan Pobst  <monkey@jpobst.com>

	* XplatUIX11.cs: Hardcode FrameBorderSize value temporarily to fix MWF.

2007-03-07  Pedro Martínez Juliá  <pedromj@gmail.com>

	* DataGridView.cs: Remove event handler from DataView when a
	DataTable is used as DataSource.

2007-03-08  Jonathan Pobst  <monkey@jpobst.com>
