@@ -236,6 +236,7 @@ namespace System.Windows.Forms {
 			set {
 				backcolor_set = true;
 				base.BackColor = value;
+				Invalidate ();
 			}
 		}
 
@@ -275,13 +276,6 @@ namespace System.Windows.Forms {
 				return base.ForeColor;
 			}
 			set {
-				// This is to duplicate a bug on MS (80590)
-				// My guess is that they do not create their
-				// textdocument until the handle is created,
-				// and forecolor is actually a property of the
-				// textdocument.
-				if (this is TextBox && read_only && !backcolor_set)
-					return;
 				base.ForeColor = value;
 			}
 		}
@@ -474,6 +468,7 @@ namespace System.Windows.Forms {
 				if (value != read_only) {
 					read_only = value;
 					OnReadOnlyChanged(EventArgs.Empty);
+					Invalidate ();
 				}
 			}
 		}
